# shoplytics

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .sqlfluff  CONTRIBUTING.md  Dockerfile  Makefile  README.en.md  README.md  README_CN.md  config.py  docker-compose.superset.yml  docker-compose.yml  download_data.sh  pyproject.toml  requirements.txt  run_all.py
.github/workflows/: ci.yml  mirror-to-gitee.yml
dashboard/: README.md  app.py  requirements.txt
data/: DATASET_GUIDE.md
dbt/: README.md  dbt_project.yml  profiles.yml
docs/: ADR.md  dashboard.html  index.html
docs/data/: dashboard_data.json  (+1 more)
notebooks/: 01_eda_and_visualization.ipynb  02_user_churn_prediction.ipynb  03_ab_test_analysis.ipynb  04_recommendation_system.ipynb  05_cohort_and_ltv.ipynb
orchestration/: dag_template.py  pipeline_flow.py
pyspark/: 01_spark_etl.py  02_spark_metrics.py  03_spark_user_profile.py  04_spark_recommendation.py  README.md
reports/: business_insights_report.md  python_modeling_summary.md  sql_analysis_summary.md
scripts/: ab_testing.py  audit_consistency.py  behavior_features.py  benchmark_preprocessing.py  churn_prediction.py  eda.py  generate_mock.py  pipeline.py  plot_style.py  preprocess.py  recommendation.py  run_sql.py  validate_data.py
sql/: 01_database_setup.sql  02_user_retention.sql  03_conversion_funnel.sql  04_rfm_model.sql  05_ab_test_framework.sql  06_anomaly_detection.sql  07_product_analysis.sql  README.md
superset/: add_duckdb.py  superset_config.py
tests/: test_ab_test.py  test_preprocessing.py  test_validate_data.py
(+29 files in other folders)
